--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.host.url=http://sonarqube:9000
-sonar.login= {Token Generado en Sonarqube board}
+sonar.login= squ_aef171a93ea1b6dbea7ecac58bd1e2a559dec9ce
 sonar.projectKey=angular-14-app
 sonar.projectName=angular-14-app
 sonar.projectVersion=1.0
